objects/FSL_SPCertDetails_Stage__c.object
<CustomObject>
    <fields>
        <fullName>FailureReason__c</fullName>
        <label>FailureReason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketApplication__c</fullName>
        <label>MarketApplication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRange__c</fullName>
        <label>ProductRange</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>ProductType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCertDetailRowId__c</fullName>
        <externalId>true</externalId>
        <label>SPCertDetailRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCertRowId__c</fullName>
        <externalId>true</externalId>
        <label>SPCertRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCode__c</fullName>
        <label>SPCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPRowId__c</fullName>
        <externalId>true</externalId>
        <label>SPRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>FSL_SPCertDetails_Stage</label>
    <nameField>
        <label>FSL_SPCertDetails_Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL_SPCertDetails_Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>